Fix - page layout cutoff issue10

--- a/assets/preset1_hart.css
+++ b/assets/preset1_hart.css
@@ -210,7 +210,7 @@
 @media (max-width: 1000px) {
   .dashboard-lgeo  {
     width: 1000px;
-    display: block;
+    display: inline-block;
     padding-left: 2%;
     padding-right: 2%;
     /* transform:scale(0.28); */
@@ -224,7 +224,7 @@
 @media (min-width: 1000px) {
   .dashboard-lgeo  {
     width: 1100px;
-    display: block;
+    display: inline-block;
     padding-left: 2%;
     padding-right: 2%;
   }
